# cybathlon_eog

./: CMakeLists.txt  README.md  package.xml
cfg/: EogBci.cfg  EogDetector.cfg  bandPassCybathlon.yaml
include/cybathlon_eog/: CybathlonEog.hpp  EogDetector.h  cybathlonEog.hpp
src/: CybathlonEog.cpp  EogDetector.cpp  cybathlonEog.cpp  cybathlonEog_node.cpp  eog_detector.cpp
