<?xml version="1.0"?>
<package format="2">
  <name>cybathlon_eog</name>
  <version>0.0.0</version>
  <description>The cybathlon_eog package</description>

  <author email="paolo.forin@phd.unipd.it">Paolo Forin</author>
  <maintainer email="paolo.forin@phd.unipd.it">Paolo Forin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rosneuro_data</depend>
  <depend>rosneuro_msgs</depend>
  <depend>message_generation</depend>
  <depend>eigen</depend>
  <depend>cybathlon_commons</depend>
  
  <exec_depend>message_runtime</exec_depend>

</package>
